refactor(api): enforce user-based authorization in Option and Vote domains
- Updated OptionController and VoteController to explicitly require the authenticated Users context.
- Refactored OptionService to verify resource ownership (only event creators can manage options).
- Hardened VoteService to prevent duplicate voting (AlreadyVotedException) and validate user permissions.
- Closed IDOR vulnerabilities by ensuring all database queries are scoped to the requesting user.
- Updated corresponding unit tests to reflect new authorization flows, edge cases, and exception handling.