@@ -17,6 +17,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -40,31 +41,48 @@ public class EventService {
         return eventMapper.toResponse(eventsRepo.saveAndFlush(eventMapper.toEntity(eventRequestDto, user)), Collections.emptyList());
     }
 
-    public EventResponseDto getEvent(String eventId) {
-        List<Option> options = optionRepo.findAllByEventId(eventId);
-        return eventMapper.toResponse(eventsRepo.findById(eventId)
-                .orElseThrow(() -> new EventNotFoundException(String.format("Event with id %s not found", eventId))), options);
+    public EventResponseDto getUserEvent(Users user, String eventId) {
+
+        Event event = eventsRepo.findByIdAndCreator(eventId, user).orElseThrow(() -> new EventNotFoundException(String.format("Event with id %s not found", eventId)));
+        List<Option> options = optionRepo.findAllByEvent_Id(eventId);
+        return eventMapper.toResponse(event, options);
     }
 
-    public EventResponseDto deleteEvent(String eventId) {
-        Event event = eventsRepo.findById(eventId).orElseThrow(() -> new EventNotFoundException(String.format("Event with id %s not found", eventId)));
-        eventsRepo.deleteById(eventId);
+    public EventResponseDto deleteUserEvent(Users user, String eventId) {
+        Event event = eventsRepo.findByIdAndCreator(eventId, user).orElseThrow(() -> new EventNotFoundException(String.format("Event with id %s not found", eventId)));
+        eventsRepo.delete(event);
         return eventMapper.toResponse(event, Collections.emptyList());
     }
 
-    public EventResponseDto updateEvent(String id,  UpdateEventRequestDto request) {
-        Event entity = eventsRepo.findById(id).orElseThrow(() -> new EventNotFoundException(String.format("Event with id %s not found", id)));
+    public EventResponseDto updateUserEvents(Users user, String eventId, UpdateEventRequestDto request){
+        Event entity = eventsRepo.findByIdAndCreator(eventId, user).orElseThrow(() -> new EventNotFoundException(String.format("Event with id %s not found", eventId)));
         eventMapper.update(request, entity);
         Event updatedEvent = eventsRepo.save(entity);
-        List<Option> options = optionRepo.findAllByEventId(id);
+        List<Option> options = optionRepo.findAllByEvent_Id(eventId);
         return eventMapper.toResponse(updatedEvent, options);
     }
     public List<EventResponseDto> getUserEvents(String userId) {
         usersRepo.findById(userId).orElseThrow(() -> new UserNotFoundException(String.format("User id %s not found", userId)));
-        return eventsRepo.findAllByCreatorId(userId)
-                .stream()
-                .map(event -> eventMapper.toResponse(event, Collections.emptyList()))
-                .collect(Collectors.toList());
+
+        List<Event> userEvents = eventsRepo.findAllByCreatorId(userId)
+                .orElse(Collections.emptyList());
+        if(userEvents.isEmpty()) {
+            return Collections.emptyList();
+        }
+        List<String> eventIds = userEvents.stream()
+                .map(Event::getId)
+                .toList();
+
+        List<Option> allOptions = optionRepo.findAllByEvent_IdIn(eventIds);
+        Map<String, List<Option>> optionsByEventId = allOptions.stream()
+                .collect(Collectors.groupingBy(Option::getEventId));
+
+        return userEvents.stream()
+                .map(event -> {
+                    List<Option> eventOptions = optionsByEventId.getOrDefault(event.getId(), Collections.emptyList());
+                    return eventMapper.toResponse(event, eventOptions);
+                })
+                .toList();
     }
 
 }
